--- a/index.html
+++ b/index.html
@@ -1,51 +1,17 @@
 <html>
     <head>
         <title>Wishlist</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
         <!-- <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script> -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
         <style>
-
-/*          body {
-                font-family: "Pacifico", cursive;
-                background: linear-gradient(#ff6161, #9198e5);
-                background-repeat: no-repeat;
-                background-attachment: fixed;
-            }
-            a:hover {
-                text-decoration: none;
-            }
-            .container {max-width: 900px;}
-
-            .card-price, .card-title {
-                text-align: center;
-            }
-            .card-price {
-                position: relative;
-                bottom: 40px;
-                width: 280px;
-                font-size: 24pt;
-            }
-            .card-title {
-                position: relative;
-                bottom: 50px;
-                width: 280px;
-                color: #FFF;
-                font-size: 20pt;
-            }
-            .title {
-                color: #FFF;
-                margin-left:auto;
-                margin-right:auto;
-                text-align:center;
-            } */
-
             body {
                 background-color: #2f3239;
                 font-family: 'Raleway', sans-serif;
-                padding-top: 10px;
+                padding: 30px 0px;
             }
 
             #content {
@@ -57,18 +23,9 @@
             }
 
             /* https://tympanus.net/Development/HoverEffectIdeas/ */
-            /* .grid {
-                position: relative;
-                margin: 0 auto;
-                max-width: 1000px;
-                list-style: none;
-                text-align: center;
-            } */
-
-            /* Common style */
             .figure {
                 margin: 5px;
-                min-width: 480px;
+                min-width: 400px;
                 max-width: 33.3%;
                 height: 360px;
                 flex: 33.3%;
